2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0

2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new FileUtility for reading files, resolves #3

2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed functional tests for TYPO3 CMS 8

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #1

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76004

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new Connector exceptions and updated unit tests, resolves #75924
	* Changed sample configuration to use test file, resolves #75925

2016-04-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75914

2016-03-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected bug with files starting with a BOM, resolves #54778
	* Released version 1.5.3, resolves #73877

2015-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.5.2, resolves #67397

2015-06-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added unit tests, resolves #67387
	* Added check for catching and discarding empty lines, resolves #67386

2015-05-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of non-Unix line endings, resolves #66899 (thanks to Simon Schaufelberger)
	* Released version 1.5.1, resolves #66949

2015-04-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong code sample in documentation, resolves #66596 (thanks to Martin Hummer)

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.5.0, resolves #57767

2014-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
