@@ -18,7 +18,7 @@
 	},
 	"version": "2.2.1",
 	"require": {
-		"typo3/cms-core": ">=7.6.0,<9.0",
+		"typo3/cms-core": ">=7.6.0,<10.0",
 		"cobweb/svconnector": ">=3.2.0"
 	},
 	"replace": {
