@@ -1,3 +1,7 @@
+2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Drop compatibility with TYPO3 7, clean up code and prepare for compatibility with TYPO3 9, resolves #5.
+
 2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Updated documentation regarding allowed absolute file paths
